# projectshelf

./: CHANGELOG.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
bundled-git/: README.md
src/: App.css  App.tsx  HelpView.tsx  HubView.tsx  RepoView.tsx  SettingsPanel.tsx  api.ts  repoFileListing.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  git.rs  lib.rs  main.rs  repo_meta.rs
