[package]
name = "deskvio"
version = "1.1.2"
description = "Deskvio — local-first Git repository desktop app"
authors = ["Wildchiken"]
edition = "2021"

[lib]
name = "deskvio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
thiserror = "2"
directories = "5"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "fast-rng"] }

